--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Mangoclient's Portfolio</title>
 </head>
 <body>
-    <h2>Site Coming Soon</h2>
-    
+    <div id="div1">
+        <img id="mypfp" src="images/profilepic.jpeg" alt="A logo image">
+        <h1>Site Coming Soon</h1>
+        <h2 data-value="MANGOCLIENT">MANGOCLIENT</h2>
+        <script src="js/scramble.js"></script>
+    </div>
 </body>
 </html>
