--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <title>Mangoclient's Portfolio</title>
 </head>
 <body>
     <div id="div1">
-        <img id="mypfp" src="images/profilepic.jpeg" alt="A logo image">
-        <h1>Site Coming Soon</h1>
-        <h2 data-value="MANGOCLIENT">MANGOCLIENT</h2>
+        <h1 data-value="DANIEL LEE'S PORTFOLIO">DANIEL LEE'S PORTFOLIO</h1>
         <script src="js/scramble.js"></script>
+        <h2 id="headbar">whoami blog resume contactme</h2>
     </div>
 </body>
 </html>
