fixed path directories

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/navlink.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
@@ -14,7 +15,13 @@
     <div id="div1">
         <h1 data-value="DANIEL LEE'S PORTFOLIO">DANIEL LEE'S PORTFOLIO</h1>
         <script src="js/scramble.js"></script>
-        <h2 id="headbar">whoami blog resume contactme</h2>
+        <ul id="nav-links">
+            <li><a href="whoami.html">whoami</a></li>
+            <li><a href="blog.html">blog</a></li>
+            <li><a href="resume.html">resume</a></li>
+            <li><a href="contactme.html">contactme</a></li>
+        </ul>
     </div>
+      
 </body>
 </html>
