--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1 data-value="DANIEL LEE'S PORTFOLIO">DANIEL LEE'S PORTFOLIO</h1>
         <script src="js/scramble.js"></script>
         <ul id="nav-links">
+            <li><a href="home.html">home</a></li>
             <li><a href="whoami.html">whoami</a></li>
             <li><a href="blog.html">blog</a></li>
             <li><a href="resume.html">resume</a></li>
