--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <h1 data-value="DANIEL LEE'S PORTFOLIO">DANIEL LEE'S PORTFOLIO</h1>
         <script src="js/scramble.js"></script>
         <ul id="nav-links">
-            <li><a href="home.html">home</a></li>
-            <li><a href="whoami.html">whoami</a></li>
-            <li><a href="blog.html">blog</a></li>
-            <li><a href="resume.html">resume</a></li>
-            <li><a href="contactme.html">contactme</a></li>
+            <li><a href="html/home.html">home</a></li>
+            <li><a href="html/whoami.html">whoami</a></li>
+            <li><a href="html/blog.html">blog</a></li>
+            <li><a href="html/resume.html">resume</a></li>
+            <li><a href="html/contactme.html">contactme</a></li>
         </ul>
     </div>
       
