--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
         <ul id="nav-links">
             <li><a href="html/home.html">home</a></li>
             <li><a href="html/whoami.html">whoami</a></li>
-            <li><a href="html/blog.html">blog</a></li>
+            <li class="writeups">
+                <a href="html/blogs.html">writeups</a>
+                <ul>
+                  <li><a href="html/research.html">research/projects</a></li>
+                  <li><a href="html/blogs.html">blogs</a></li>
+                </ul>
+            </li>
             <li><a href="html/resume.html">resume</a></li>
             <li><a href="html/contactme.html">contactme</a></li>
         </ul>
     </div>
-      
 </body>
 </html>
