--- a/html/whoami.html
+++ b/html/whoami.html
@@ -4,25 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>whoami</title>
-    <link rel="stylesheet" href="css/whoami.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/navlink.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+    <title>whoami - Mangoclient's Portfolio</title>
 </head>
 <body>
+    <iframe src="navlink.html" frameborder="0" scrolling="no"></iframe>
     <div id="div1">
-        <script src="js/scramble.js"></script>
-        <ul id="nav-links">
-            <li><a href="html/home.html">home</a></li>
-            <li><a href="html/whoami.html">whoami</a></li>
-            <li class="writeups">
-                <a href="html/blogs.html">writeups</a>
-                <ul>
-                  <li><a href="html/research.html">research/projects</a></li>
-                  <li><a href="html/blogs.html">blogs</a></li>
-                </ul>
-            </li>
-            <li><a href="html/resume.html">resume</a></li>
-            <li><a href="html/contactme.html">contactme</a></li>
-        </ul>
+        <h1>whoami</h1>
+        <p>Some information about myself. My name is Daniel Lee</p>
     </div>
 </body>
 </html>
