--- a/html/whoami.html
+++ b/html/whoami.html
@@ -12,7 +12,8 @@
     <title>whoami - Mangoclient's Portfolio</title>
 </head>
 <body>
-    <iframe src="navlink.html" frameborder="0" scrolling="no"></iframe>
+    <iframe src="../html/navlink.html" frameborder="0" scrolling="no"></iframe>
+
     <div id="div1">
         <h1>whoami</h1>
         <p>Some information about myself. My name is Daniel Lee</p>
