--- a/html/whoami.html
+++ b/html/whoami.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/navlink.css">
+    <link rel="stylesheet" href="../css/whoami.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <title>whoami - Mangoclient's Portfolio</title>
 </head>
 <body>
-    <iframe src="../html/navlink.html" frameborder="0" scrolling="no"></iframe>
-
-    <div id="div1">
+    <iframe id="iframe-navlink" src="navlink.html" title="navigation links"></iframe>
+    <div id="div2">
         <h1>whoami</h1>
         <p>Some information about myself. My name is Daniel Lee</p>
     </div>
