fixed redirecting links

--- a/html/navlink.html
+++ b/html/navlink.html
@@ -13,17 +13,17 @@
 </head>
 <body>
     <ul id="nav-links">
-        <li><a href="../html/home.html">home</a></li>
-        <li><a href="../html/whoami.html">whoami</a></li>
+        <li><a href="../index.html" target="_top">home</a></li>
+        <li><a href="../html/whoami.html" target="_top">whoami</a></li>
         <li class="writeups">
-            <a href="../html/blogs.html">writeups</a>
+            <a href="../html/blogs.html" target="_top">writeups</a>
             <ul>
-                <li><a href="../html/research.html">research/projects</a></li>
-                <li><a href="../html/blogs.html">blogs</a></li>
+                <li><a href="../html/research.html" target="_top">research/projects</a></li>
+                <li><a href="../html/blogs.html" target="_top">blogs</a></li>
             </ul>
         </li>
-        <li><a href="../html/resume.html">resume</a></li>
-        <li><a href="../html/contactme.html">contactme</a></li>
+        <li><a href="../html/resume.html" target="_top">resume</a></li>
+        <li><a href="../html/contactme.html" target="_top">contactme</a></li>
     </ul>
 </body>
 </html>
