--- a/html/research.html
+++ b/html/research.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/navlink.css">
+    <link rel="stylesheet" href="../css/research.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+    <title>whoami - Mangoclient's Portfolio</title>
 </head>
 <body>
-    <h1>THIS IS MY research</h1>
+    <iframe id="iframe-navlink" src="navlink.html" title="navigation links"></iframe>
+    <div id="div2">
+        <h1 id="h1whoami">Writeups: Research/Projects</h1>
+        <ul id="research-links">
+            <li>Date: 02-04-2023 <a href="../writeups/keylogger.html" target="_top"> [ keylogger ]</a></li>
+        </ul>
+    </div> 
 </body>
 </html>
