--- a/writeups/cybersecurityhygiene.html
+++ b/writeups/cybersecurityhygiene.html
@@ -6,20 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/navlink.css">
-    <link rel="stylesheet" href="../css/research.css">
+    <link rel="stylesheet" href="../css/writeup.css">
+    <link rel="stylesheet" href="../css/whoami.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <title>whoami - Mangoclient's Portfolio</title>
 </head>
 <body>
-    <iframe id="iframe-navlink" src="navlink.html" title="navigation links"></iframe>
-    <div id="div2">
-        <h1 id="h1whoami">Writeups: Research/Projects</h1>
-        <ul id="research-links">
-            <li>Date: 01-17-2023 <a href="../writeups/cybersecurityhygiene.html" target="_top"> [ CyberSecurity Hygiene ]</a></li>
-            <li>Date: 01-17-2023 <a href="../writeups/cybersecurityhygiene.html" target="_top"> [ What is HTTP? ]</a></li>
-        </ul>
-    </div> 
+    <iframe id="iframe-navlink" src="../html/navlink.html" title="navigation links"></iframe>
+    <div id="div3">
+        <h1 id="h1whoami">CyberSecurity Hygiene </h1>
+    </div>
 </body>
 </html>
