--- a/html/contactme.html
+++ b/html/contactme.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>CONTACT ME HERE</h2>
+    <h2>contact me page coming soon</h2>
 </body>
 </html>
