--- a/writeups/2fabypass.html
+++ b/writeups/2fabypass.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <title>whoami - Mangoclient's Portfolio</title>
+    <title>2FAbypass - Mangoclient's Portfolio</title>
 </head>
 <body>
     <iframe id="iframe-navlink" src="../html/navlink.html" title="navigation links"></iframe>
