--- a/html/blogs.html
+++ b/html/blogs.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <title>whoami - Mangoclient's Portfolio</title>
+    <title>Blogs - Mangoclient's Portfolio</title>
 </head>
 <body>
     <iframe id="iframe-navlink" src="navlink.html" title="navigation links"></iframe>
