--- a/html/research.html
+++ b/html/research.html
@@ -17,8 +17,8 @@
     <div id="div2">
         <h1 id="h1whoami">Writeups: Research/Projects</h1>
         <ul id="research-links">
-            <li>Date: 01-04-2023 <a href="../writeups/keylogger.html" target="_top"> [ keylogger ]</a></li>
-            <li>Date: 03-20-2023 <a href="../writeups/2fabypass.html" target="_top"> [ 2FA bypass ]</a></li>
+            <li>Date: 01-04-2023 <a href="../writeups/keylogger.html" target="_top"> [ RAT keylogger ]</a></li>
+            <li>Date: 03-20-2023 <a href="../writeups/2fabypass.html" target="_top"> [ 2FA bypass w/ evilginx2 ]</a></li>
             <li>Date: 04-02-2023 <a href="../writeups/pfsense.html" target="_top"> [ pfSense/Snort IDS/IPS ]</a></li>
         </ul>
     </div> 
