--- a/html/blogs.html
+++ b/html/blogs.html
@@ -18,6 +18,7 @@
         <h1 id="h1whoami">Writeups: Research/Projects</h1>
         <ul id="research-links">
             <li>Date: 12-17-2022 <a href="../writeups/cybersecurityhygiene.html" target="_top"> [ CyberSecurity Hygiene ]</a></li>
+            <li>Date: 11-15-2022 <a href="../writeups/cybersecurityhygiene.html" target="_top"> [ Understanding Malware and Malware Types ]</a></li>
             <li>Date: 01-17-2023 <a href="../writeups/http.html" target="_top"> [ What is HTTP? ]</a></li>
         </ul>
     </div> 
