--- a/html/blogs.html
+++ b/html/blogs.html
@@ -15,7 +15,7 @@
 <body>
     <iframe id="iframe-navlink" src="navlink.html" title="navigation links"></iframe>
     <div id="div2">
-        <h1 id="h1whoami">Writeups: Research/Projects</h1>
+        <h1 id="h1whoami">Writeups: Blog/Learn About Security</h1>
         <ul id="research-links">
             <li>Date: 12-17-2022 <a href="../writeups/cybersecurityhygiene.html" target="_top"> [ CyberSecurity Hygiene ]</a></li>
             <li>Date: 11-15-2022 <a href="../writeups/malwareandmalwaretypes.html" target="_top"> [ Understanding Malware and Malware Types ]</a></li>
