--- a/html/research.html
+++ b/html/research.html
@@ -15,11 +15,11 @@
 <body>
     <iframe id="iframe-navlink" src="navlink.html" title="navigation links"></iframe>
     <div id="div2">
-        <h1 id="h1whoami">Writeups: Research/Projects</h1>
+        <h1 id="h1whoami">Writeups: Research/Projects/Labs</h1>
         <ul id="research-links">
             <li>Date: 01-04-2022 <a href="../writeups/keylogger.html" target="_top"> [ keylogger ]</a></li>
-            <li>Date: 03-20-2023 <a href="../writeups/2fabypass.html" target="_top"> [ 2FA bypass w/ evilginx2 ]</a></li>
-            <li>Date: 04-02-2023 <a href="../writeups/pfsense.html" target="_top"> [ pfSense/Snort IDS/IPS ]</a></li>
+            <li>Date: 03-20-2023 <a href="../writeups/2fabypass.html" target="_top"> [ What is evilginx2? ]</a></li>
+            <li>Date: 04-02-2023 <a href="../writeups/pfsense.html" target="_top"> [ Snort Intrusion Detection and Logging ]</a></li>
         </ul>
     </div> 
 </body>
