--- a/html/research.html
+++ b/html/research.html
@@ -20,6 +20,7 @@
             <li>Date: 01-04-2022 <a href="../writeups/keylogger.html" target="_top"> [ keylogger ]</a></li>
             <li>Date: 03-20-2023 <a href="../writeups/2fabypass.html" target="_top"> [ What is evilginx2? ]</a></li>
             <li>Date: 04-02-2023 <a href="../writeups/snort1.html" target="_top"> [ Snort Intrusion Detection and Logging ]</a></li>
+            <li>Date: 08-10-2023 <a href="../writeups/splunk1.html" target="_top"> [ Security Event Monitoring with Splunk ]</a></li>
         </ul>
     </div> 
 </body>
