--- a/html/research.html
+++ b/html/research.html
@@ -21,6 +21,8 @@
             <li>Date: 03-20-2023 <a href="../writeups/2fabypass.html" target="_top"> [ What is evilginx2? ]</a></li>
             <li>Date: 04-02-2023 <a href="../writeups/snort1.html" target="_top"> [ Snort Intrusion Detection and Logging ]</a></li>
             <li>Date: 08-10-2023 <a href="../writeups/splunk1.html" target="_top"> [ Security Event Monitoring with Splunk ]</a></li>
+            <li>Date: 07-20-2022 <a href="../writeups/wireshark1.html" target="_top"> [ Decrypting HTTP traffic with WireShark ]</a></li>
+            <li>Date: 06-23-2022 <a href="../writeups/portsploit.html" target="_top"> [ PortSploit ]</a></li>
         </ul>
     </div> 
 </body>
