--- a/html/resume.html
+++ b/html/resume.html
@@ -7,6 +7,8 @@
     <title>Resume Page</title>
 </head>
 <body>
-    <p>resume page coming soon</p>
+    <script>
+        window.location.href = "https://github.com/jhyungleeCS/portfolio/pdf/resume.pdf";
+    </script>
 </body>
 </html>
