--- a/html/resume.html
+++ b/html/resume.html
@@ -7,8 +7,6 @@
     <title>Resume Page</title>
 </head>
 <body>
-    <script>
-        window.location.href = "https://github.com/jhyungleeCS/portfolio/blob/main/pdf/resume.pdf";
-    </script>
+    <embed src="../pdf/jhyungleeresume.pdf" width="100%" height="600" type="application/pdf">
 </body>
 </html>
