added contact page

--- a/html/contactme.html
+++ b/html/contactme.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/navlink.css">
+  <link rel="stylesheet" href="../css/whoami.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+  
+  <title>Contact Me -- Daniel Lee Portfolio</title>
 </head>
 <body>
-    <h2>contact me page coming soon</h2>
+    <iframe id="iframe-navlink" src="navlink.html" title="navigation links"></iframe>
+    <a href="https://www.linkedin.com/in/daniel-lee-32a954184/" class="icon-link">
+        <img src="../icons/linkedin.png" alt="linkedin Icon"> 
+    </a>
+    
+    <a href="https://github.com/jhyungleeCS" class="icon-link">
+        <img src="../icons/github.png" alt="Github Icon">
+    </a>
+
+    <a href="mailto:jhyunglee.cs@gmail.com" class="icon-link">
+        <img src="../icons/envelope.png" alt="Email Icon">
+    </a>
 </body>
 </html>
